# Jet-Rag

./: .env.example  .gitignore  CHANGELOG.md  README.md  design.md
api/: .dockerignore  Dockerfile  pyproject.toml
api/app/: config.py  logging_setup.py  main.py
api/migrations/: 001_init.sql  002_documents_received_ms.sql  003_hybrid_search.sql  004_pgroonga_korean_fts.sql  004_rollback.sql  005_vision_usage_log.sql  006_search_metrics_log.sql  008_search_mode_split_rpc.sql  014_vision_usage_log_enhanced.sql  015_vision_page_cache.sql  016_embed_query_cache.sql  017_invite_codes.sql  018_migrate_default_user.sql  019_rls_policies.sql  020_storage_per_user_prefix.sql  021_usage_counters.sql  022_plans_subscriptions.sql  023_email_ingest_addresses.sql  024_source_channel_email.sql  025_billing_subscription.sql  README.md
api/scripts/: README.md  analyze_vision_need_score.py  backfill_chunk_flags.py  backfill_extract_skipped.py  billing_charge.py  compute_budget.py  diagnose_chunk_quality.py  dryrun_chunk_repolicy.py  golden_batch_smoke.py  m2_w4_full_reingest.py  migrate_storage_to_per_user.py  monitor_search_slo.py  poc_vision_need_score.py  verify_phase1.py
api/tests/: __init__.py  test_acceptable_judge.py  test_adapter_factory.py  test_admin_feedback.py  test_admin_gate.py  test_admin_queries.py  test_admin_subscriptions.py  test_answer_router_confidence.py  test_answer_router_decomposition.py  test_auth_demo_fallback.py  test_auth_dependencies.py  test_auth_jwt.py  test_auth_protected_routes.py  test_auto_goldenset.py  test_bgem3_deepinfra_embedding.py  (+104 more)
(+516 files in other folders)
